[tool.poetry]
name = "meme-bot"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]
packages = [{ include = "meme_bot" }]

[tool.poetry.scripts]
meme_bot = "meme_bot.entrypoints.cli:main"


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
